--- a/main.html
+++ b/main.html
@@ -12,6 +12,8 @@
 
     </head>
 
+    <script src="code.js"></script>
+
     <body>
         <div class="container">
             <nav class="navbar">
@@ -86,13 +88,13 @@
 
                 <h1>CONTACT ME</h1>
 
-                    <form action="https://formsubmit.co/el/mifago" method="POST">
+                    <form action="https://formsubmit.co/ke.coder08@gmail.com" method="POST">
                         <input type="text" name="name" placeholder="Full Name" required>
                         <input type="email" name="email" placeholder="Email" required>
                         <input type="text" name="companyname" placeholder="Company Name" required>
                         <input type="text" name="subject" placeholder="Subject" required>
                         <textarea name="message" rows="10" cols="20" placeholder="Message"></textarea>
-                        <button type="button" name="buttonsubmit" id="buttonsubmit">Submit</button>
+                        <button type="button" name="buttonsubmit">Submit</button>
                     </form>
 
             </section>
