--- a/main.html
+++ b/main.html
@@ -94,7 +94,7 @@
                         <input type="text" name="companyname" placeholder="Company Name" required>
                         <input type="text" name="subject" placeholder="Subject" required>
                         <textarea name="message" rows="10" cols="20" placeholder="Message"></textarea>
-                        <button type="button" name="buttonsubmit">Submit</button>
+                        <button type="button" id="buttonsubmit">Submit</button>
                     </form>
 
             </section>
