--- a/main.html
+++ b/main.html
@@ -89,7 +89,7 @@
 
                 <h1>CONTACT ME</h1>
 
-                    <form onsubmit="SendEmail(); reset(); return false">
+                    <form onsubmit="SendEmail()">
                         <input type="text" name="name" placeholder="Full Name" required>
                         <input type="email" name="email" placeholder="Email" required>
                         <input type="text" name="companyname" placeholder="Company Name" required>
