--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
                     <li><a href="#about">About Me</a></li>
                     <!-- <li><a href="#projects">Projects</a></li> -->
                     <li><a href="#skills">Skills</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="https://formsubmit.co/el/mifago">Contact</a></li>
                 </ul>
             </nav>
  
@@ -36,7 +36,7 @@
                  <h1><strong><div class id="color">K</div>yle 
                     <div class id="color">E</div>rica A. Danque</strong></h1>
 
-                    <a href="#contact"><button type="button" id="buttonhome"> CONTACT ME</button></a>
+                    <a href="https://formsubmit.co/el/mifago"><button type="button" id="buttonhome"> CONTACT ME</button></a>
 
                      <div class="homerec">
                         <p>
@@ -85,11 +85,11 @@
                 
             </section>
 
-            <section id="contact">
+            <!-- <section id="contact">
 
                 <h1>CONTACT ME</h1>
 
-                    <form onsubmit="SendEmail()">
+                    <form>
                         <input type="text" name="name" placeholder="Full Name" required>
                         <input type="email" name="email" placeholder="Email" required>
                         <input type="text" name="companyname" placeholder="Company Name" required>
@@ -98,7 +98,7 @@
                         <button type="submit" id="buttonsubmit">Submit</button>
                     </form>
 
-            </section>
+            </section> -->
 
             <div class="footer">
                 <p>
