--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     </head>
 
     <script src="code.js"></script>
-    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <!-- <script src="https://smtpjs.com/v3/smtp.js"></script> -->
 
     <body>
         <div class="container">
