--- a/main.html
+++ b/main.html
@@ -101,6 +101,20 @@
 
             <section id="projects">
                 <h1>PROJECTS</h1>
+                <h6>*University Projects*</h6>
+
+                <table>
+                    <tr>
+                        <th><img id="pic" src="images/up1.JPG"> </th>
+                        <th><img id="pic" src="images/up2.JPG"> </th>
+                    </tr>
+
+                    <tr>
+                        <td><label>Music Online Store: Creating and Working with databases using SQL</label></td>
+                        <td><label>Payroll System: Creating and Working with databases using SQL</label></td>
+                    </tr>
+                </table>
+
             </section>
 
             <section id="contact">
