--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     </head>
 
     <script src="code.js"></script>
-    <!-- <script src="https://smtpjs.com/v3/smtp.js"></script> -->
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
 
     <body>
         <div class="container">
@@ -122,12 +122,12 @@
                 <h1>CONTACT ME</h1>
 
                     <form>
-                        <input type="text" name="name" placeholder="Full Name" required>
-                        <input type="email" name="email" placeholder="Email" required>
-                        <input type="text" name="companyname" placeholder="Company Name" required>
-                        <input type="text" name="subject" placeholder="Subject" required>
-                        <textarea name="message" rows="10" cols="20" placeholder="Message"></textarea>
-                        <button type="submit" id="buttonsubmit">Submit</button>
+                        <input type="text" id="name" placeholder="Full Name" required>
+                        <input type="email" id="email" placeholder="Email" required>
+                        <input type="text" id="companyname" placeholder="Company Name" required>
+                        <input type="text" id="subject" placeholder="Subject" required>
+                        <textarea id="message" rows="10" cols="20" placeholder="Message"></textarea>
+                        <button type="submit" id="buttonsubmit" onclick="SendEmail()">Submit</button>
                     </form>
 
             </section>
