--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
                     <li><a href="#about">About Me</a></li>
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#projects">Projects</a></li>
-                    <li><a href="https://formsubmit.co/el/mifago">Contact</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
  
@@ -36,7 +36,7 @@
                     <h1><strong><div class id="color">K</div>yle 
                        <div class id="color">E</div>rica A. Danque</strong></h1>
    
-                       <a href="https://formsubmit.co/el/mifago"><button type="button" id="buttonhome"> CONTACT ME</button></a>
+                       <a href="#contact"><button type="button" id="buttonhome"> CONTACT ME</button></a>
    
                         <div class="whiteline"> </div>
 
@@ -53,8 +53,7 @@
                     Philippines, which provides exceptional education and holistic training.
                     During my first three years at the university, 
                     I learned different programming languages and decided to focus my skills 
-                    as a front-end web developer. I may be entry-level in HTML, CSS, and JavaScript, 
-                    but I am learning, reading, and continuously watching videos to enhance my skills. I am also blessed 
+                    as a web developer. I am continuously  learning, reading, and watching videos to enhance my skills. I am also blessed 
                     and grateful for I was a scholar and dean's lister in my university days since my first year. 
                     I believe that my experience and passion for learning will help your company to reach its goals.
                     I look forward to discussing the position, my qualifications, and working with you all. 
@@ -117,7 +116,7 @@
 
             </section>
 
-            <!-- <section id="contact">
+            <section id="contact">
 
                 <h1>CONTACT ME</h1>
 
@@ -130,7 +129,7 @@
                         <button type="submit" id="buttonsubmit" onclick="SendEmail()">Submit</button>
                     </form>
 
-            </section> -->
+            </section>
 
             <!-- Messenger Chat plugin Code -->
                 <div id="fb-root"></div>
