--- a/main.html
+++ b/main.html
@@ -81,6 +81,9 @@
                     <li>C#</li>
                     <li>PYTHON</li>
                     <li>JAVA</li>
+                    <li>.NET</li>
+                    <li>ASP.NET</li>
+                    <li>ANDROID DEV + SQLITE</li>
                 </ul>
 
                 <hr id="hrskills">
