--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
                     <li><a href="#about">About Me</a></li>
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#projects">Projects</a></li>
-                    <li><a href="https://formsubmit.co/el/mifago">Contact</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
  
@@ -36,7 +36,7 @@
                     <h1><strong><div class id="color">K</div>yle 
                        <div class id="color">E</div>rica A. Danque</strong></h1>
    
-                       <a href="https://formsubmit.co/el/mifago"><button type="button" id="buttonhome"> CONTACT ME</button></a>
+                       <a href="#contact"><button type="button" id="buttonhome"> CONTACT ME</button></a>
    
                         <div class="whiteline"> </div>
 
