--- a/main.html
+++ b/main.html
@@ -47,17 +47,17 @@
             <section id="about">
 
                 <h1>ABOUT ME</h1>
+                <h5><q>You will never know someone's capability unless you work with them</q></h5>
 
-                <p> &emsp;Greetings! I am Kyle Erica A. Danque, a fourth-year Bachelor of Science in Information 
-                    Technology student at De La Salle University - Dasmarinas Cavite, 
-                    Philippines, which provides exceptional education and holistic training.
-                    During my first three years at the university, 
-                    I learned different programming languages and decided to focus my skills 
-                    as a web developer. I am continuously  learning, reading, and watching videos to enhance my skills. I am also blessed 
-                    and grateful for I was a scholar and dean's lister in my university days since my first year. 
-                    I believe that my experience and passion for learning will help your company to reach its goals.
-                    I look forward to discussing the position, my qualifications, and working with you all. 
-                    I am excited to be part of the team! Thank you for the time to know me!</p>
+                <p> &emsp;Greetings! I am Kyle Erica A. Danque, taking a Bachelor of Science in Information 
+                    Technology at De La Salle University - Dasmarinas Cavite, 
+                    Philippines. I learned different programming languages along with web hosting sites such as
+                    CPANEL, and different IDE. I've decided to focus my skills as a developer/designer. 
+                    The projects that I have included in this portfolio is just twenty percent of what I had 
+                    already developed. I believe that my experience and passion for learning will help your 
+                    company to reach its goals. I look forward to discussing the position, my qualifications, 
+                    and working with you all. I am excited to be part of the team! Thank you for the time to know me!
+                </p>
             </section>
 
 
@@ -103,7 +103,6 @@
 
             <section id="projects">
                 <h1>PROJECTS</h1>
-                <h6>*University Projects*</h6>
 
                 <table>
                     <tr>
