--- a/main.html
+++ b/main.html
@@ -64,11 +64,12 @@
             <section id="skills">
                
                 <h1>SKILLS </h1>
+                <h5>Experience Level: 1+ year/s to the following: </h5>
                 
                 <ul>
                     <li>HTML</li>
                     <li>CSS</li>
-                    <li>JAVASCRIPT</li>
+                    <li>JAVASCRIPT)</li>
                     <li>PHP</li>
                     <li>MYSQL</li>
                 </ul>
