--- a/main.html
+++ b/main.html
@@ -69,7 +69,7 @@
                 <ul>
                     <li>HTML</li>
                     <li>CSS</li>
-                    <li>JAVASCRIPT)</li>
+                    <li>JAVASCRIPT</li>
                     <li>PHP</li>
                     <li>MYSQL</li>
                 </ul>
