--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             
             <div class="text" id="test">
                 ke.coder08@gmail.com
+                <h6>"A new personal assistant character is on the making"</h6>
         </div>
         <div class="spinner-box">
             <div class="conf-border1">
