--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             
             <div class="text" id="test">
                 ke.coder08@gmail.com
-                <h6>"This portfolio is currently updating. You will be redirected to the older version. Thank you."</h6>
+                <h6>"This portfolio is currently updating. Kindly contact me in my Gmail. Thank you. "</h6>
         </div>
         <div class="spinner-box">
             <div class="conf-border1">
