--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="author" content="Kyle Erica Danque">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta http-equiv="refresh" content="4;url=main.html"/>
+        <meta http-equiv="refresh" content="4;url=home.html"/>
 
         <link href="loadingstyle.css" rel="stylesheet" type="text/css"> 
     </head>
