--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
         <meta name="author" content="Kyle Erica Danque">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta http-equiv="refresh" content="4;url=home.html"/>
+        <!-- <meta http-equiv="refresh" content="4;url=home.html"/> -->
 
-        <link href="loadingstyle.css" rel="stylesheet" type="text/css"> 
+        <link href="css/loadingstyle.css" rel="stylesheet" type="text/css"> 
     </head>
 
-    <script src="code.js"></script>
+    <script src="js/code.js"></script>
 
     <body>
         <div class="container">
