--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title></title>
-        <link href="style.css" rel="stylesheet" type="text/css">
+        <link href="css/style.css" rel="stylesheet" type="text/css">
     </head>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
