--- a/main.html
+++ b/main.html
@@ -7,12 +7,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UI-Compatible" content="ie=edge"> 
-        <link href="pagestyle.css" rel="stylesheet" type="text/css">
+        <link href="css/pagestyle.css" rel="stylesheet" type="text/css">
 
 
     </head>
 
-    <script src="code.js"></script>
+    <script src="js/code.js"></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
 
     <body>
