--- a/intro_2.html
+++ b/intro_2.html
@@ -9,7 +9,7 @@
         <meta name="author" content="Kyle Erica Danque">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta http-equiv="refresh" content="5;url=intro_2.html"/>
+        <meta http-equiv="refresh" content="6;url=form.html"/>
 
         <link href="css/style.css" rel="stylesheet" type="text/css"> 
     </head>
@@ -23,7 +23,7 @@
 
         <div class="bloopy_user">
             <div class="typewriter">
-                <h1>Hi! I am Bloopy - Ms. KE's personal assistant.</h1>
+                <h1>You need to answer a form first to proceed.</h1>
               </div>
 
                 <img src="images/Bloopy.png">
