--- a/main.html
+++ b/main.html
@@ -26,10 +26,10 @@
             <nav class="navbar">  <!--NAV_BAR-->
                <ul>
                     <li><span class="text"><a href="#bloopy_pop"><img src="images/Bloopy_cut.png"></a>BLOOPY</span></li>
-                    <li><span class="text"><img src="images/icon_skills.png">SKILLS</span></li>
-                    <li><span class="text"><img src="images/icon_project.png">PROJECTS</span></li>
-                    <li><span class="text"><img src="images/icon_archived.png">ARCHIVED</span></li>
-                    <li><span class="text"><img src="images/icon_info.png">DEVELOPER</span></li>
+                    <li><span class="text"><a href="#skills_pop"><img src="images/icon_skills.png"></a>SKILLS</span></li>
+                    <li><span class="text"><a href="#project_pop"><img src="images/icon_project.png"></a>PROJECTS</span></li>
+                    <li><span class="text"><a href="#archived_pop"><img src="images/icon_archived.png"></a>ARCHIVED</span></li>
+                    <li><span class="text"><a href="#info_pop"><img src="images/icon_info.png"></a>OTHER INFORMATION</span></li>
                </ul>
                
             </nav>
@@ -40,7 +40,7 @@
                   <h2>LAPTOP</h2>
                   <a class="close" href="#">&times;</a>
                   <div class="content">
-                    google.com
+                    " Okayy, I'm gonna let you se"
                   </div>
                 </div>
               </div>
@@ -85,6 +85,50 @@
             <div id="bloopy_pop" class="overlay">
               <div class="popup">
                 <h2>BLOOPY</h2>
+                <a class="close" href="#">&times;</a>
+                <div class="content">
+                  Thank to pop me out of that button, but now i'm done so you can close this window.
+                </div>
+              </div>
+            </div>
+
+            <!--SKILLS_POP-->
+            <div id="skills_pop" class="overlay">
+              <div class="popup">
+                <h2>SKILLS</h2>
+                <a class="close" href="#">&times;</a>
+                <div class="content">
+                  Thank to pop me out of that button, but now i'm done so you can close this window.
+                </div>
+              </div>
+            </div>
+
+             <!--PROJECT_POP-->
+             <div id="project_pop" class="overlay">
+              <div class="popup">
+                <h2>PROJECT</h2>
+                <a class="close" href="#">&times;</a>
+                <div class="content">
+                  <a href="https://www.google.com/" target="_blank">GOOGLE</a> <br>
+                </div>
+              </div>
+            </div>
+
+             <!--ARCHIVED_POP-->
+             <div id="archived_pop" class="overlay">
+              <div class="popup">
+                <h2>ARCHIVED</h2>
+                <a class="close" href="#">&times;</a>
+                <div class="content">
+                  Thank to pop me out of that button, but now i'm done so you can close this window.
+                </div>
+              </div>
+            </div>
+
+             <!--INFO_POP-->
+             <div id="info_pop" class="overlay">
+              <div class="popup">
+                <h2>INFO</h2>
                 <a class="close" href="#">&times;</a>
                 <div class="content">
                   Thank to pop me out of that button, but now i'm done so you can close this window.
