--- a/main.html
+++ b/main.html
@@ -40,7 +40,17 @@
                   <h2>LAPTOP</h2>
                   <a class="close" href="#">&times;</a>
                   <div class="content">
-                    " Okayy, I'm gonna let you se"
+                    <a href="https://www.google.com/" target="_blank"><img src="images/icon_chrome.png"></a>
+                    &nbsp;&nbsp;&nbsp;
+                    <a href="https://www.bigfishgames.com/games/1331/mystery-case-files-ravenhearst/?pc" target="_blank"><img src="images/icon_ravenhearst.png"></a>
+                    &nbsp;&nbsp;&nbsp;
+                    <a href="https://zoom.us/signin" target="_blank"><img src="images/icon_zoom.png"></a>
+                    <br><br>
+                    <a href="https://www.netflix.com/ph/Login" target="_blank"><img src="images/icon_netflix.png"></a>
+                    &nbsp;&nbsp;&nbsp;
+                    <a href="https://www.photopea.com/" target="_blank"><img src="images/icon_photopea.png"></a>
+
+
                   </div>
                 </div>
               </div>
