--- a/main.html
+++ b/main.html
@@ -37,7 +37,7 @@
             <!--LAPTOP_POP-->
             <div id="laptop_pop" class="overlay">
                 <div class="popup">
-                  <h2>LAPTOP</h2>
+                  <h2>BLOOPY'S LAPTOP</h2>
                   <a class="close" href="#">&times;</a>
                   <div class="content">
                     <a href="https://www.google.com/" target="_blank"><img src="images/icon_chrome.png"></a>
@@ -94,10 +94,11 @@
             <!--BLOOPY_POP-->
             <div id="bloopy_pop" class="overlay">
               <div class="popup">
-                <h2>BLOOPY</h2>
+                <h2>HI THERE!</h2>
                 <a class="close" href="#">&times;</a>
                 <div class="content">
-                  Thank to pop me out of that button, but now i'm done so you can close this window.
+                  " How are you today? <br> I'm Bloopy - Ms. KE's personal assistant. She is not around, but
+                  feel free to look in my office to know more about her. " <br> <br> - Bloopy
                 </div>
               </div>
             </div>
