--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <title> 
-            Ke_MyPortfolio
+            KE_Portfolio
         </title>
 
         <meta charset="UTF-8">
