--- a/intro_2.html
+++ b/intro_2.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title> 
-            Ke_MyPortfolio
+            KE_Portfolio
         </title>
 
         <meta charset="UTF-8">
