--- a/project.html
+++ b/project.html
@@ -20,7 +20,7 @@
     
     <body>
         <div class="projects">
-            HELLOOO
+            <h1>HER PROJECTS FOR WEB DEV</h1>
         </div>    
 
     </body>
