--- a/project.html
+++ b/project.html
@@ -23,6 +23,18 @@
             <h1>HER PROJECTS FOR WEB DEV</h1>
         </div>    
 
+        <table>
+            <tr>
+                <th>HATDOG</th>
+                <th>HADUKEN</th>
+            </tr>
+
+            <tr>
+                <td>BULLDOG</td>
+                <td>CATDOG</td>
+            </tr>
+        </table>
+
     </body>
 
     
