--- a/main.html
+++ b/main.html
@@ -178,6 +178,10 @@
                   Date of Update<br>
                   <hr>
                   September 2022 <br> <br>
+
+                  Last Update<br>
+                  <hr>
+                  August 2022 <br> <br>
                 </div>
               </div>
             </div>
