--- a/main.html
+++ b/main.html
@@ -174,6 +174,9 @@
                   <hr>
                   KE <br> <br>
 
+                  Contact Information<br>
+                  <hr>
+                  ke.coder08@gmail.com <br> <br>
 
                   Date of Update<br>
                   <hr>
