--- a/project.html
+++ b/project.html
@@ -20,17 +20,19 @@
     
     <body>
         <div class="projects">
-            <h1>HER PROJECTS FOR WEB DEV</h1>
+            <h1>HER WEB DEV PROJECTS</h1>
 
             <table>
                 <tr>
-                    <th>HATDOG</th>
-                    <th>HADUKEN</th>
+                    <th>PROJECT NAME</th>
+                    <th>DESCRIPTION</th>
+                    <th>DATE PUBLISHED</th>
                 </tr>
     
                 <tr>
                     <td>BULLDOG</td>
                     <td>CATDOG</td>
+                    <td>JUMBO HOTDOG</td>
                 </tr>
             </table>
         </div>    
