--- a/main.html
+++ b/main.html
@@ -44,11 +44,7 @@
                   <div class="content">
                     <a href="https://www.google.com/" target="_blank"><img src="images/icon_chrome.png"></a>
                     &nbsp;&nbsp;&nbsp;
-                    <a href="https://www.bigfishgames.com/games/1331/mystery-case-files-ravenhearst/?pc" target="_blank"><img src="images/icon_ravenhearst.png"></a>
-                    &nbsp;&nbsp;&nbsp;
                     <a href="https://zoom.us/signin" target="_blank"><img src="images/icon_zoom.png"></a>
-                    <br><br>
-                    <a href="https://www.netflix.com/ph/Login" target="_blank"><img src="images/icon_netflix.png"></a>
                     &nbsp;&nbsp;&nbsp;
                     <a href="https://www.photopea.com/" target="_blank"><img src="images/icon_photopea.png"></a>
 
@@ -76,7 +72,7 @@
                 <h2>CAT</h2>
                 <a class="close" href="#">&times;</a>
                 <div class="content">
-                  " This is just only a mini statue. Ms. KE likes cats. " <br><br> - Bloopy
+                  " This is just only a mini statue." <br><br> - Bloopy
                 </div>
               </div>
             </div>
@@ -88,7 +84,7 @@
                 <h2>CLOCK</h2>
                 <a class="close" href="#">&times;</a>
                 <div class="content">
-                  " It's getting late. Luckily, I can work 24/7! " <br> <br> - Bloopy    
+                  " I hope that next time, this works in real-time. " <br> <br> - Bloopy    
                 </div>
               </div>
             </div>
@@ -96,11 +92,11 @@
             <!--BLOOPY_POP-->
             <div id="bloopy_pop" class="overlay">
               <div class="popup">
-                <h2>HI THERE!</h2>
+                <h2>BLOOPY</h2>
                 <a class="close" href="#">&times;</a>
                 <div class="content">
-                  " How are you today? <br> I'm Bloopy - Ms. KE's personal assistant. She is not around, but
-                  feel free to look in my office to know more about her. " <br> <br> - Bloopy
+                  " Hi! I'm Bloopy! My developer made me.
+                  Feel free to look in my virtual office. " <br> <br> - Bloopy
                 </div>
               </div>
             </div>
@@ -170,21 +166,14 @@
                   <hr>
                   Kyle Erica A. Danque <br> <br>
 
-                  Nickname<br>
-                  <hr>
-                  KE <br> <br>
-
                   Contact Information<br>
                   <hr>
                   ke.coder08@gmail.com <br> <br>
 
-                  Date of Update<br>
+                  Date of Update - Last Update<br>
                   <hr>
-                  September 2022 <br> <br>
+                  September 2022 - August 2022  <br> <br>
 
-                  Last Update<br>
-                  <hr>
-                  August 2022 <br> <br>
                 </div>
               </div>
             </div>
