--- a/project.html
+++ b/project.html
@@ -24,16 +24,26 @@
 
             <table>
                 <tr>
-                    <th>PROJECT NAME</th>
+                    <th>PROJECT NAME / LINK</th>
                     <th>DESCRIPTION</th>
                     <th>DATE PUBLISHED</th>
                 </tr>
     
                 <tr>
-                    <td>BULLDOG</td>
-                    <td>CATDOG</td>
-                    <td>JUMBO HOTDOG</td>
+                    <td><a href="http://registerevent.rf.gd/" target="_blank"> >> Simple Registration Form for an Event </a></td>
+                    <td>This is just a simple registration form with different user inputs with the "method=get". 
+                        <br>This was created and developed for academic purposes only, following the requirements.</td>
+                    <td>September 2022</td>
                 </tr>
+
+                <tr>
+                    <td><a href="projects/simple_layout/index.html" target="_blank"> >> Simple copying a layout of a Web page </a></td>
+                    <td>This is just a simple layout, copying the DLSUD's Student Life Web Page. 
+                        <br> Here is the link of the web page. <a href="https://www.dlsud.edu.ph/campuslife/studentlife/undergraduate.htm" target="_blank">https://www.dlsud.edu.ph/campuslife/studentlife/undergraduate.htm</a>
+                        <br>This was created and developed for academic purposes only, following the requirements.</td>
+                    <td>September 2022</td>
+                </tr>
+            
             </table>
         </div>    
 
