--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="author" content="Kyle Erica Danque">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <!-- <meta http-equiv="refresh" content="4;url=main.html"/> -->
+        <meta http-equiv="refresh" content="4;url=main.html"/>
 
         <link href="css/loadingstyle.css" rel="stylesheet" type="text/css"> 
     </head>
@@ -22,7 +22,7 @@
             
             <div class="text" id="test">
                 ke.coder08@gmail.com
-                <h6>"This portfolio is currently updating. Kindly contact me in my Gmail. Thank you. "</h6>
+                <!-- <h6>"This portfolio is currently updating. Kindly contact me in my Gmail. Thank you. "</h6> -->
         </div>
         <div class="spinner-box">
             <div class="conf-border1">
