--- a/project.html
+++ b/project.html
@@ -46,14 +46,14 @@
 
                 <tr>
                     <td><a href="https://drive.google.com/file/d/1xWbiDLWRjSVR0pKrTZYxcgdhrxswWu7D/view?usp=sharing" target="_blank"> >> Music Online Store </a></td>
-                    <td>This is just a simple video about a music online store that uses PHP and MYSQl.
+                    <td>This is just a simple video about a music online store that uses PHP, MYSQl, and JS.
                         <br>This was created and developed for academic purposes only, following the requirements.</td>
                     <td>November - December 2021</td>
                 </tr>
 
                 <tr>
                     <td><a href="https://drive.google.com/file/d/1ehICIsJSdpfKnzSOxoYH4zIdSk7j6kFb/view?usp=sharing" target="_blank"> >> Payroll System </a></td>
-                    <td>This is just a simple video about a payroll system that uses PHP and MYSQl.
+                    <td>This is just a simple video about a payroll system that uses PHP, MYSQl and JS.
                         <br>This was created and developed for academic purposes only, following the requirements.</td>
                     <td>September - October 2021</td>
                 </tr>
