--- a/intro.html
+++ b/intro.html
@@ -23,7 +23,7 @@
 
         <div class="bloopy_user">
             <div class="typewriter">
-                <h1>Hi! I am Bloopy - Ms. KE's personal assistant.</h1>
+                <h1>Hi! I am Bloopy! I was made by my developer.</h1>
               </div>
 
                 <img src="images/Bloopy.png">
