--- a/intro_2.html
+++ b/intro_2.html
@@ -9,7 +9,7 @@
         <meta name="author" content="Kyle Erica Danque">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta http-equiv="refresh" content="6;url=form.html"/>
+        <!-- <meta http-equiv="refresh" content="6;url=form.html"/> -->
 
         <link href="css/style.css" rel="stylesheet" type="text/css"> 
     </head>
