--- a/project.html
+++ b/project.html
@@ -31,11 +31,11 @@
     
                 <tr>
                     <td><a href="https://drive.google.com/file/d/1zkhO4kw0fZmxzlikE769kNYOEgg78h1d/view?usp=sharing" target="_blank"> >> Days of the Week </a></td>
-                    <td>This is just a simple video asking for the user input and prints the corresponding date.
+                    <td>This is just a simple video asking for user input and prints the corresponding date.
                         <br> It uses HTML and JavaScript only.
                     <td>September 2022</td>
                 </tr>
-                
+
                 <tr>
                     <td><a href="http://registerevent.rf.gd/" target="_blank"> >> Simple Registration Form for an Event </a></td>
                     <td>This is just a simple registration form with different user inputs with the "method=get". 
