--- a/main.html
+++ b/main.html
@@ -45,8 +45,10 @@
                     <a href="https://www.google.com/" target="_blank"><img src="images/icon_chrome.png"></a>
                     &nbsp;&nbsp;&nbsp;
                     <a href="https://zoom.us/signin" target="_blank"><img src="images/icon_zoom.png"></a>
-                    &nbsp;&nbsp;&nbsp;
+                    <br>
                     <a href="https://www.photopea.com/" target="_blank"><img src="images/icon_photopea.png"></a>
+                    &nbsp;&nbsp;&nbsp;
+                    <a href="https://www.pinterest.ph/kecoder08/" target="_blank"><img src="images/icon_pinterest.png"></a>
 
 
                   </div>
