--- a/main.html
+++ b/main.html
@@ -29,8 +29,8 @@
                <ul>
                     <li><span class="text"><a href="#bloopy_pop"><img src="images/Bloopy_cut.png"></a>BLOOPY</span></li>
                     <li><span class="text"><a href="#skills_pop"><img src="images/icon_skills.png"></a>SKILLS</span></li>
+                    <li><span class="text"><a href="#archived_pop"><img src="images/icon_archived.png"></a>OTHER SKILLS</span></li>
                     <li><span class="text"><a href="project.html" target="_blank"><img src="images/icon_project.png"></a>PROJECTS</span></li>
-                    <li><span class="text"><a href="#archived_pop"><img src="images/icon_archived.png"></a>ARCHIVED</span></li>
                     <li><span class="text"><a href="#info_pop"><img src="images/icon_info.png"></a>INFORMATION</span></li>
                </ul>
                
@@ -47,10 +47,6 @@
                     <a href="https://zoom.us/signin" target="_blank"><img src="images/icon_zoom.png"></a>
                     &nbsp;&nbsp;&nbsp;
                     <a href="https://www.photopea.com/" target="_blank"><img src="images/icon_photopea.png"></a>
-                    <!-- &nbsp;&nbsp;&nbsp; -->
-                    <!-- <a href="https://www.pinterest.ph/kecoder08/" target="_blank"><img src="images/icon_pinterest.png"></a> -->
-
-
                   </div>
                 </div>
               </div>
@@ -136,7 +132,7 @@
              <!--ARCHIVED_POP-->
              <div id="archived_pop" class="overlay">
               <div class="popup">
-                <h2>HER ARCHIVED SKILLS</h2>
+                <h2>HER OTHER SKILLS</h2>
                 <a class="close" href="#">&times;</a>
                 <div class="content">
                   With at least 8 months - 1 year of experience<br> 
