--- a/intro_2.html
+++ b/intro_2.html
@@ -23,7 +23,7 @@
 
         <div class="bloopy_user">
             <div class="typewriter">
-                <h1>Feel free to look in my virtual workspace >>></h1>
+                <h1>Know more about my developer as we proceed.</h1>
               </div>
 
                 <img src="images/Bloopy.png">
