--- a/project.html
+++ b/project.html
@@ -55,15 +55,33 @@
                     <td>November - December 2021</td>
                 </tr>
 
-             
+                <!--2021 PROJECTS-->
+                <tr>
+                    <td><a href="https://docs.google.com/presentation/d/1regPpP1ATR19xcWz7SJW8fsR9RHCPY6u/edit?usp=sharing&ouid=115754756734790382024&rtpof=true&sd=true" target="_blank"> HOW ARE YOU APP <br> [prototype] </a></td>
+                    <td>A simple mobile protoype. 
+                        <br>This was created and developed for academic purposes only, following the requirements.</td>
+                    <td>ADOBE PS
+                    <td>February 2021</td>
+                </tr>
+
+
                 <!--2020 PROJECTS-->
 
                 <tr>
-                    <td><a href="https://drive.google.com/file/d/1tPK_DscnrgUUkn0PjyO-TnruYogaKNdj/view?usp=sharing" target="_blank"> Mario Game [video] </a></td>
-                    <td>An inspired Mario Game Development developed by four people. 
+                    <td><a href="https://docs.google.com/presentation/d/1jQgM9_9DY38NxRRWmBjeyN3MMrDrFjUM/edit?usp=sharing&ouid=115754756734790382024&rtpof=true&sd=true" target="_blank"> Automatic Syringe <br> [prototype] </a></td>
+                    <td>A simple made- up protoype that seeks to solve and answer question or problems. 
+                        <br>This was created and developed for academic purposes only, following the requirements.</td>
+                    <td>ADOBE PS
+                    <td>October 2020</td>
+                </tr>
+
+                <tr>
+                    <td><a href="https://drive.google.com/file/d/1IbmdC1E0P8be6cecR3FkkpidyUzXaHWp/view?usp=sharing" target="_blank"> Home Style Pizza <br> [src code] </a>
+                        <a href="https://drive.google.com/file/d/1tqC8F-J-Zs0VeYVXFfC0oZDhJArnaEua/view?usp=sharing" target="_blank"><br> [img] </a></td>
+                    <td>A simple order form using checkbox and radio buttons. 
                         <br>This was created and developed for academic purposes only, following the requirements.</td>
                     <td>JAVA
-                    <td>May 2020</td>
+                    <td>April 2020</td>
                 </tr>
 
                 <tr>
@@ -88,6 +106,14 @@
                         <br>This was created and developed for academic purposes only, following the requirements.</td>
                     <td>JAVA
                     <td>April 2020</td>
+                </tr>
+
+                <tr>
+                    <td><a href="https://drive.google.com/file/d/1tPK_DscnrgUUkn0PjyO-TnruYogaKNdj/view?usp=sharing" target="_blank"> Mario Game [video] </a></td>
+                    <td>An inspired Mario Game Development developed by four people. 
+                        <br>This was created and developed for academic purposes only, following the requirements.</td>
+                    <td>JAVA
+                    <td>May 2020</td>
                 </tr>
 
 
