--- a/project.html
+++ b/project.html
@@ -20,26 +20,28 @@
     
     <body>
         <div class="projects">
-            <h1>HER PROJECTS</h1>
+            <h1>HER UNIVERSITY PROJECTS</h1>
             <hr>
 
             <table>
                 <tr>
                     <th>PROJECT NAME / LINK</th>
                     <th>DESCRIPTION</th>
-                    <th>LANGUAGES/TOOL USED</th>
+                    <th>LANGUAGES / TOOL USED</th>
                     <th>DATE CREATED</th>
                 </tr>
                 <!--2022 PROJECTS-->
                 <tr>
-                    <td><a href="https://drive.google.com/file/d/1zkhO4kw0fZmxzlikE769kNYOEgg78h1d/view?usp=sharing" target="_blank"> Days of the Week <br> [video] </a></td>
+                    <td>Days of the Week 
+                        <a href="https://drive.google.com/file/d/1zkhO4kw0fZmxzlikE769kNYOEgg78h1d/view?usp=sharing" target="_blank"> <br> [video] </a></td>
                     <td> This is just a simple video asking for user input and prints the corresponding date.
                     <td> HTML / JAVASCRIPT
                     <td>September 2022</td>
                 </tr>
 
                 <tr>
-                    <td><a href="http://registerevent.rf.gd/" target="_blank"> Simple Registration Form for an Event <br> [src code] </a></td>
+                    <td> Simple Registration Form for an Event 
+                        <a href="http://registerevent.rf.gd/" target="_blank"><br> [src code] </a></td>
                     <td>This is just a simple registration form with different user inputs with the "method=get". 
                         <br>This was created and developed for academic purposes only, following the requirements.</td>
                     <td>HTML / CSS</td>
@@ -47,7 +49,39 @@
                 </tr>
 
                 <tr>
-                    <td><a href="https://drive.google.com/file/d/1xWbiDLWRjSVR0pKrTZYxcgdhrxswWu7D/view?usp=sharing" target="_blank"> Music Online Store <br> [video] </a></td>
+                    <td> Data Visualization
+                        <a href="https://drive.google.com/file/d/1ud3GFsAX5v7lHC7RN3ns8tqkrQdbmOgr/view?usp=sharing" target="_blank"><br> [src code] </a>
+                        <a href="https://drive.google.com/file/d/12FbcnTUFyBQcMt80Qe3I49d4PeF4AZJp/view?usp=sharing" target="_blank"><br> [video] </a></td>
+                    <td>This is just a simple data visualization. 
+                        <br>This was created and developed for academic purposes only, following the requirements.</td>
+                    <td>C# / ASP.NET / MICROSOFT SQL</td>
+                    <td>May 2022</td>
+                </tr>
+
+                <tr>
+                    <td> Registration Form 
+                        <a href="https://drive.google.com/file/d/13l28MNhxe22VnF-G08RkzV8p0yEOtDjH/view?usp=sharing" target="_blank"><br> [src code] </a>
+                        <a href="https://drive.google.com/file/d/1d0LbFDztugqno41UgGShFlVTkhxTeGZ6/view?usp=sharing" target="_blank"><br> [video] </a></td>
+                    <td>This is just a simple registration form. 
+                        <br>This was created and developed for academic purposes only, following the requirements.</td>
+                    <td>C# / ASP.NET</td>
+                    <td>March 2022</td>
+                </tr>
+
+                <!--2021 PROJECTS-->
+                <tr>
+                    <td>Encrypt Password 
+                        <a href="https://drive.google.com/file/d/1QjKmndy89x6qUCOu57mrihJCs4c1ENp2/view?usp=sharing" target="_blank"> <br> [src code] </a>
+                        <a href="https://drive.google.com/file/d/1NdJTv0Ax8dB6x0dFvsaXjPnyQwFSc3a7/view?usp=sharing" target="_blank"> <br> [video] </a></td>
+                    <td>A simple encryption of password requiring the username credentials.
+                        <br>This was created and developed for academic purposes only, following the requirements.</td>
+                    <td>C# / MICROSOFT SQL / .NET
+                    <td>December 2021</td>
+                </tr>
+
+                <tr>
+                    <td>Music Online Store
+                        <a href="https://drive.google.com/file/d/1xWbiDLWRjSVR0pKrTZYxcgdhrxswWu7D/view?usp=sharing" target="_blank"> <br> [video] </a></td>
                     <td>This is just a simple video about a music online store that asks for the user inputs.
                         <br>This was created and developed for academic purposes only, following the requirements.</td>
                     <td>PHP / MYSQL 
@@ -55,9 +89,66 @@
                     <td>November - December 2021</td>
                 </tr>
 
-                <!--2021 PROJECTS-->
                 <tr>
-                    <td><a href="https://docs.google.com/presentation/d/1regPpP1ATR19xcWz7SJW8fsR9RHCPY6u/edit?usp=sharing&ouid=115754756734790382024&rtpof=true&sd=true" target="_blank"> HOW ARE YOU APP <br> [prototype] </a></td>
+                    <td>Loan Calculator App
+                        <a href="https://drive.google.com/file/d/15FOMMePF_14-FuZ0krnW9a3M8lQsOish/view?usp=sharing" target="_blank"> <br> [src code + video] </a></td>
+                    <td>A loan calculator app that asks for user credentials and update the database.
+                        <br>This was created and developed for academic purposes only, following the requirements.</td>
+                    <td>C# / MICROSOFT SQL / .NET
+                    <td>November 2021</td>
+                </tr>
+
+                <tr>
+                    <td>Sales Ordering System
+                        <a href="https://drive.google.com/file/d/1w28R6M35E4VZkXtZzvtu_JFb217BAIMZ/view?usp=sharing" target="_blank"> <br> [src code] </a></td>
+                    <td>A sales ordering system that asks the user and prints the receipt.
+                        <br>This was created and developed for academic purposes only, following the requirements.</td>
+                    <td>C# / .NET
+                    <td>September 2021</td>
+                </tr>
+
+                <tr>
+                    <td>Calculator
+                        <a href="https://drive.google.com/file/d/1lxh4obA9hXAmdYKvCETO6qi7VNMv-Uzt/view?usp=sharing" target="_blank"> <br> [src code] </a>
+                        <a href="https://drive.google.com/file/d/1NHS_KkU_YC132CT8dZLz_qxUiafGLZeJ/view?usp=sharing" target="_blank"> <br> [video] </a></td>
+                    <td>A simple calculator with GUI.
+                        <br>This was created and developed for academic purposes only, following the requirements.</td>
+                    <td>C# / .NET
+                    <td>September 2021</td>
+                </tr>
+
+                <tr>
+                    <td>Payroll System 
+                        <a href="https://drive.google.com/file/d/1ScwDwyQ9dj32gbiBCQZ5y3LWsdLMtZL8/view?usp=sharing" target="_blank"> <br> [src code] </a>
+                        <a href="https://drive.google.com/file/d/14oj945Ipb6j7XWW9W03Fr6EbzfxVdScv/view?usp=sharing" target="_blank"> <br> [video] </a></td>
+                    <td>A simple payroll system that traps all the possible errors.
+                        <br>This was created and developed for academic purposes only, following the requirements.</td>
+                    <td>C# / .NET
+                    <td>September 2021</td>
+                </tr>
+
+                <tr>
+                    <td>Random Arithmetic Operation <br> w/ timer countdown
+                        <a href="https://drive.google.com/file/d/16sVXUUHORuEaajZO50nS0DdO0Lq2SZA9/view?usp=sharing" target="_blank"> <br> [src code] </a></td>
+                    <td>A simple payroll system that traps all the possible errors.
+                        <br>This was created and developed for academic purposes only, following the requirements.</td>
+                    <td>C# / .NET
+                    <td>September 2021</td>
+                </tr>
+
+                <tr>
+                    <td>BMI Calculator
+                        <a href="https://drive.google.com/file/d/11O3DRkpyHUMpvkN7OvifvUSZjWrADzdw/view?usp=sharing" target="_blank"> <br> [src code + video] </a>
+                    <td>An Android Application that computes the BMI and classifies the user's weight.
+                        <br>This was created and developed for academic purposes only, following the requirements.</td>
+                    <td>JAVA / ANDROID
+                    <td>September 2021</td>
+                </tr>
+
+              
+                <tr>
+                    <td>HOW ARE YOU APP 
+                        <a href="https://docs.google.com/presentation/d/1regPpP1ATR19xcWz7SJW8fsR9RHCPY6u/edit?usp=sharing&ouid=115754756734790382024&rtpof=true&sd=true" target="_blank"> <br> [prototype] </a></td>
                     <td>A simple mobile protoype. 
                         <br>This was created and developed for academic purposes only, following the requirements.</td>
                     <td>ADOBE PS
@@ -68,15 +159,35 @@
                 <!--2020 PROJECTS-->
 
                 <tr>
-                    <td><a href="https://docs.google.com/presentation/d/1jQgM9_9DY38NxRRWmBjeyN3MMrDrFjUM/edit?usp=sharing&ouid=115754756734790382024&rtpof=true&sd=true" target="_blank"> Automatic Syringe <br> [prototype] </a></td>
-                    <td>A simple made- up protoype that seeks to solve and answer question or problems. 
+                    <td>Automatic Syringe 
+                        <a href="https://docs.google.com/presentation/d/1jQgM9_9DY38NxRRWmBjeyN3MMrDrFjUM/edit?usp=sharing&ouid=115754756734790382024&rtpof=true&sd=true" target="_blank"> <br> [prototype] </a></td>
+                    <td>A simple made- up protoype that seeks to solve and answer question or problems about a syringe. 
                         <br>This was created and developed for academic purposes only, following the requirements.</td>
                     <td>ADOBE PS
                     <td>October 2020</td>
                 </tr>
 
                 <tr>
-                    <td><a href="https://drive.google.com/file/d/1IbmdC1E0P8be6cecR3FkkpidyUzXaHWp/view?usp=sharing" target="_blank"> Home Style Pizza <br> [src code] </a>
+                    <td>Subdivision's Map
+                        <a href="https://docs.google.com/presentation/d/1X3rwOSnNjFlEUa-eKjL4x5zo2dn97DLc/edit?usp=sharing&ouid=115754756734790382024&rtpof=true&sd=true" target="_blank">  <br> [prototype] </a></td>
+                    <td>A simple made- up protoype that seeks to solve and answer question or problems about a subdivision. 
+                        <br>This was created and developed for academic purposes only, following the requirements.</td>
+                    <td>ADOBE PS
+                    <td>October 2020</td>
+                </tr>
+
+                <tr>
+                    <td>Mouse
+                        <a href="https://drive.google.com/file/d/18lJgMmAdxLWQ_Tt7Y-U0ebKaU4JjYFSy/view?usp=sharing" target="_blank"> <br> [prototype] </a></td>
+                    <td>A simple made- up protoype to create a more advance mouse than the traditional ones. 
+                        <br>This was created and developed for academic purposes only, following the requirements.</td>
+                    <td>ADOBE PS
+                    <td>September 2020</td>
+                </tr>
+
+                <tr>
+                    <td>Home Style Pizza 
+                        <a href="https://drive.google.com/file/d/1IbmdC1E0P8be6cecR3FkkpidyUzXaHWp/view?usp=sharing" target="_blank"><br> [src code] </a>
                         <a href="https://drive.google.com/file/d/1tqC8F-J-Zs0VeYVXFfC0oZDhJArnaEua/view?usp=sharing" target="_blank"><br> [img] </a></td>
                     <td>A simple order form using checkbox and radio buttons. 
                         <br>This was created and developed for academic purposes only, following the requirements.</td>
@@ -85,23 +196,19 @@
                 </tr>
 
                 <tr>
-                    <td><a href="https://onlinegdb.com/q4LhO9bkJ" target="_blank"> Computation of Integer Power <br> [src code] </a></td>
-                    <td>A simple calculation of integer power using a static method. 
+                    <td>Computation of Integer Power 
+                        <a href="https://onlinegdb.com/q4LhO9bkJ" target="_blank"> <br> [src code -static] </a></td>
+                        <a href="https://drive.google.com/file/d/13LkTbN78r0o0Uyffq9G7yvyHSZ1vULgP/view?usp=sharing" target="_blank"> <br> [src code -non static] </a>
+                    <td>A simple calculation of integer power using a static and non-static method. 
                         <br>This was created and developed for academic purposes only, following the requirements.</td>
                     <td>JAVA
                     <td>April 2020</td>
                 </tr>
 
-                <tr>
-                    <td><a href="https://drive.google.com/file/d/13LkTbN78r0o0Uyffq9G7yvyHSZ1vULgP/view?usp=sharing" target="_blank"> Computation of Integer Power <br> [src code] </a></td>
-                    <td>A simple calculation of integer power using a non - static method. 
-                        <br>This was created and developed for academic purposes only, following the requirements.</td>
-                    <td>JAVA
-                    <td>April 2020</td>
-                </tr>
 
                 <tr>
-                    <td><a href="https://drive.google.com/file/d/1tPK_DscnrgUUkn0PjyO-TnruYogaKNdj/view?usp=sharing" target="_blank"> Computation of Base Exponent <br> [src code] </a></td>
+                    <td>Computation of Base Exponent
+                        <a href="https://drive.google.com/file/d/1tPK_DscnrgUUkn0PjyO-TnruYogaKNdj/view?usp=sharing" target="_blank">  <br> [src code] </a></td>
                     <td>A simple computation of base exponent using the Math built-in Object. 
                         <br>This was created and developed for academic purposes only, following the requirements.</td>
                     <td>JAVA
@@ -109,7 +216,8 @@
                 </tr>
 
                 <tr>
-                    <td><a href="https://drive.google.com/file/d/1tPK_DscnrgUUkn0PjyO-TnruYogaKNdj/view?usp=sharing" target="_blank"> Mario Game [video] </a></td>
+                    <td>Mario Game [video] 
+                        <a href="https://drive.google.com/file/d/1tPK_DscnrgUUkn0PjyO-TnruYogaKNdj/view?usp=sharing" target="_blank"> </a></td>
                     <td>An inspired Mario Game Development developed by four people. 
                         <br>This was created and developed for academic purposes only, following the requirements.</td>
                     <td>JAVA
@@ -119,7 +227,8 @@
 
                 <!--2019 PROJECTS-->
                 <tr>
-                    <td><a href="https://onlinegdb.com/2LZ63CUrW" target="_blank"> Calculator of Semestral Grade <br> [src code] </a></td>
+                    <td>Calculator of Semestral Grade 
+                        <a href="https://onlinegdb.com/2LZ63CUrW" target="_blank"> <br> [src code] </a></td>
                     <td>A simple computation for finding the Semestral Grades.
                         <br>This was created and developed for academic purposes only, following the requirements.</td>
                     <td>C++
@@ -127,7 +236,8 @@
                 </tr>
 
                 <tr>
-                    <td><a href="https://onlinegdb.com/abNAk06Ac" target="_blank"> Gross Salary Computation <br> [src code] </a></td>
+                    <td>Gross Salary Computation 
+                        <a href="https://onlinegdb.com/abNAk06Ac" target="_blank"> <br> [src code] </a></td>
                     <td>A simple computation for finding the Gross Salary of an Employee.
                         <br>This was created and developed for academic purposes only, following the requirements.</td>
                     <td>C++
@@ -135,7 +245,8 @@
                 </tr>
 
                 <tr>
-                    <td><a href="https://onlinegdb.com/78pAsepym" target="_blank"> Determine Number if <br> Positive or Negative <br> [src code] </a></td>
+                    <td>Determine Number if <br> Positive or Negative
+                        <a href="https://onlinegdb.com/78pAsepym" target="_blank">  <br> [src code] </a></td>
                     <td>A simple if statement to determine if a number is positive,negative, or zero.
                         <br>This was created and developed for academic purposes only, following the requirements.</td>
                     <td>C++
@@ -143,7 +254,8 @@
                 </tr>
 
                 <tr>
-                    <td><a href="https://onlinegdb.com/0YY1skdtv" target="_blank"> Determine a Number if <br> Odd or Even  <br> [src code]</a></td>
+                    <td>Determine a Number if <br> Odd or Even  
+                        <a href="https://onlinegdb.com/0YY1skdtv" target="_blank"> <br> [src code]</a></td>
                     <td>A simple if-else statement to determine if a number is odd or even.
                         <br>This was created and developed for academic purposes only, following the requirements.</td>
                     <td>C++
