--- a/project.html
+++ b/project.html
@@ -99,6 +99,33 @@
                 </tr>
 
                 <tr>
+                    <td>Loan Calculator App: Android
+                        <a href="https://drive.google.com/file/d/1IQdCMxSjUI0MqGCNrm-_s5KTpc9_NrR2/view?usp=sharing" target="_blank"> <br> [src code + video] </a>
+                    <td>An Android Application that users can compute for their loans.
+                        <br>This was created and developed for academic purposes only, following the requirements.</td>
+                    <td>JAVA / ANDROID
+                    <td>October 2021</td>
+                </tr>
+
+                <tr>
+                    <td>Calculator
+                        <a href="https://drive.google.com/file/d/1QlYFjDRmd9h0PpRraImUZbKp5G5IguYn/view?usp=sharing" target="_blank"> <br> [src code + video] </a>
+                    <td>An Android Application that have the functions of a calculator.
+                        <br>This was created and developed for academic purposes only, following the requirements.</td>
+                    <td>JAVA / ANDROID
+                    <td>October 2021</td>
+                </tr>
+
+                <tr>
+                    <td>Burger Buy Shop
+                        <a href="https://drive.google.com/file/d/1X1UWmu5lZMunGe4vROW3g3xPawloBgO-/view?usp=sharing" target="_blank"> <br> [src code + video] </a>
+                    <td>An Android Application that will let the user order for a variety of burgers.
+                        <br>This was created and developed for academic purposes only, following the requirements.</td>
+                    <td>JAVA / ANDROID / SQLite
+                    <td>October 2021</td>
+                </tr>
+
+                <tr>
                     <td>Sales Ordering System
                         <a href="https://drive.google.com/file/d/1w28R6M35E4VZkXtZzvtu_JFb217BAIMZ/view?usp=sharing" target="_blank"> <br> [src code] </a></td>
                     <td>A sales ordering system that asks the user and prints the receipt.
@@ -170,7 +197,7 @@
                 <tr>
                     <td>Subdivision's Map
                         <a href="https://docs.google.com/presentation/d/1X3rwOSnNjFlEUa-eKjL4x5zo2dn97DLc/edit?usp=sharing&ouid=115754756734790382024&rtpof=true&sd=true" target="_blank">  <br> [prototype] </a></td>
-                    <td>A simple made- up protoype that seeks to solve and answer question or problems about a subdivision. 
+                    <td>A simple made-up protoype that seeks to solve and answer question or problems about a subdivision. 
                         <br>This was created and developed for academic purposes only, following the requirements.</td>
                     <td>ADOBE PS
                     <td>October 2020</td>
