--- a/main.html
+++ b/main.html
@@ -47,6 +47,9 @@
                     <a href="https://zoom.us/signin" target="_blank"><img src="images/icon_zoom.png"></a>
                     &nbsp;&nbsp;&nbsp;
                     <a href="https://www.photopea.com/" target="_blank"><img src="images/icon_photopea.png"></a>
+                    <br>
+                    <a href="https://www.linkedin.com/in/kyle-erica-danque-090165251/" target="_blank"><img src="images/icon_linkedin.png"></a>
+
                   </div>
                 </div>
               </div>
