--- a/project.html
+++ b/project.html
@@ -352,8 +352,8 @@
 
                 <tr>
                     <td>Computation of Integer Power 
-                        <a href="https://onlinegdb.com/q4LhO9bkJ" target="_blank"> <br> [src code -static] </a></td>
-                        <a href="https://drive.google.com/file/d/13LkTbN78r0o0Uyffq9G7yvyHSZ1vULgP/view?usp=sharing" target="_blank"> <br> [src code -non static] </a>
+                        <a href="https://onlinegdb.com/q4LhO9bkJ" target="_blank"> <br> [src code -static] </a>
+                        <a href="https://drive.google.com/file/d/13LkTbN78r0o0Uyffq9G7yvyHSZ1vULgP/view?usp=sharing" target="_blank"> <br> [src code -non static] </a></td>
                     <td>A simple calculation of integer power using a static and non-static method. 
                         <br>This was created and developed for academic purposes only, following the requirements.</td>
                     <td>JAVA
