--- a/intro.html
+++ b/intro.html
@@ -26,7 +26,7 @@
                 <h1>Hi! I am Bloopy! I was made by my developer.</h1>
               </div>
 
-                <img src="images/Bloopy.png">
+                <img src="images/Bloopy_cut.png">
               </div>
         </div>
 
