--- a/intro_2.html
+++ b/intro_2.html
@@ -26,7 +26,7 @@
                 <h1>Know more about my developer as we proceed.</h1>
               </div>
 
-                <img src="images/Bloopy.png">
+                <img src="images/Bloopy_cut.png">
               </div>
         </div>
 
