--- a/main.html
+++ b/main.html
@@ -112,7 +112,7 @@
                   <hr>
                   HTML <br>
                   CSS <br>
-                  JAVASCRIPT <br>
+                  JAVASCRIPT ES6 <br>
                   PHP <br> <br>
 
 
