--- a/project.html
+++ b/project.html
@@ -371,8 +371,8 @@
                 </tr>
 
                 <tr>
-                    <td>Mario Game [video] 
-                        <a href="https://drive.google.com/file/d/1tPK_DscnrgUUkn0PjyO-TnruYogaKNdj/view?usp=sharing" target="_blank"> </a></td>
+                    <td>Mario Game 
+                        <a href="https://drive.google.com/file/d/1tPK_DscnrgUUkn0PjyO-TnruYogaKNdj/view?usp=sharing" target="_blank"> [video] </a></td>
                     <td>An inspired Mario Game Development developed by four people. 
                         <br>This was created and developed for academic purposes only, following the requirements.</td>
                     <td>JAVA
