--- a/main.html
+++ b/main.html
@@ -141,6 +141,7 @@
                   C++ / C#<br>
                   JAVA <br>
                   .NET / ASP.NET<br>
+                  MYSQL<br>
                 
 
                 </div>
