--- a/main.html
+++ b/main.html
@@ -31,6 +31,7 @@
                     <li><span class="text"><a href="#skills_pop"><img src="images/icon_archived.png"></a>SKILLS</span></li>
                     <li><span class="text"><a href="#tools_pop"><img src="images/icon_skills.png"></a>TOOLS</span></li>
                     <li><span class="text"><a href="project.html" target="_blank"><img src="images/icon_project.png"></a>PROJECTS</span></li>
+                    <li><span class="text"><a href="certificate.html" target="_blank"><img src="images/icon_certificate.png"></a>CERTIFICATES</span></li>
                     <li><span class="text"><a href="#info_pop"><img src="images/icon_info.png"></a>INFORMATION</span></li>
                </ul>
                
@@ -164,7 +165,7 @@
 
                   Date of Update - Last Update<br>
                   <hr>
-                  September 2022 - August 2022  <br> <br>
+                  October 2022 - September 2022  <br> <br>
 
                 </div>
               </div>
