--- a/main.html
+++ b/main.html
@@ -126,19 +126,21 @@
                 <h2>HER TECHNICAL SKILLS</h2>
                 <a class="close" href="#">&times;</a>
                 <div class="content">
+                 
+                  With at least 6 - 8 months of experience<br> 
+                  <hr>
+                  HTML / CSS / JAVASCRIPT ES6 <br> <br>
+                  
+                  [ ARCHIVED SKILLS ]
+                  <br>
+                  <hr>
+                  <br>
                   With at least 2 - 5 months of experience<br>
-                  <hr>
                   Python <br>
-                  Android Dev + SQLite <br> <br> 
-
-                  With at least 4 - 8 months of experience<br> 
-                  <hr>
-                  HTML / CSS / JAVASCRIPT ES6 <br>
+                  Android Dev + SQLite <br>
                   PHP <br> <br>
 
-
                   With at least 8 months - 1 year of experience<br> 
-                  <hr>
                   C++ / C#<br>
                   JAVA <br>
                   .NET / ASP.NET<br>
