--- a/project.html
+++ b/project.html
@@ -341,6 +341,26 @@
                 </tr>
 
                 <tr>
+                    <td>Salary Loan System
+                        <a href="https://drive.google.com/file/d/1BBJvHUeticFJwA2PJh40t4mPz3zOKZzl/view?usp=sharing" target="_blank"><br> [video] </a>
+                        </td>
+                    <td>A simple desktop application to calculate the salary loan system. 
+                        <br>This was created and developed for academic purposes only, following the requirements.</td>
+                    <td>JAVA
+                    <td>April 2020</td>
+                </tr>
+
+                <tr>
+                    <td>Currency Converter
+                        <a href="https://drive.google.com/file/d/189OdUAd3gKuW93oh_EbQbOQZVwjSkNJJ/view?usp=sharing" target="_blank"><br> [video] </a>
+                        </td>
+                    <td>A simple desktop application to convert the currency to other foreign values. 
+                        <br>This was created and developed for academic purposes only, following the requirements.</td>
+                    <td>JAVA
+                    <td>April 2020</td>
+                </tr>
+
+                <tr>
                     <td>Home Style Pizza 
                         <a href="https://drive.google.com/file/d/1IbmdC1E0P8be6cecR3FkkpidyUzXaHWp/view?usp=sharing" target="_blank"><br> [src code] </a>
                         <a href="https://drive.google.com/file/d/1tqC8F-J-Zs0VeYVXFfC0oZDhJArnaEua/view?usp=sharing" target="_blank"><br> [img] </a></td>
