--- a/project.html
+++ b/project.html
@@ -31,6 +31,39 @@
                     <th>DATE CREATED</th>
                 </tr>
                 <!--2022 PROJECTS-->
+
+                <tr>
+                    <td>Race Day
+                        <a href="https://drive.google.com/file/d/1Wcv3XppvOZRyTnDjsXk2r6fA1rO6ts8p/view?usp=sharing" target="_blank"> <br> [src code] </a></td>
+                    <td> A project in CodeCademy that have if else statements for the runner's age and time of registration.
+                    <td> JAVASCRIPT ES6
+                    <td>October 2022</td>
+                </tr>
+
+                <tr>
+                    <td>Magic Eight Ball
+                        <a href="https://drive.google.com/file/d/1lpEVx0hKE5iss6i607PXmSnXsIaUyICX/view?usp=sharing" target="_blank"> <br> [src code] </a></td>
+                    <td> A project in CodeCademy that asks for the name of the user and randomized a number up to 8.
+                    <td> JAVASCRIPT ES6
+                    <td>October 2022</td>
+                </tr>
+
+                <tr>
+                    <td>Dog Years
+                        <a href="https://drive.google.com/file/d/1VyM7VG3z9AZLK7R4kpt-VKVZEwZVhBqw/view?usp=sharing" target="_blank"> <br> [src code] </a></td>
+                    <td> A project in CodeCademy that will compute the human age to dog's age.
+                    <td> JAVASCRIPT ES6
+                    <td>October 2022</td>
+                </tr>
+
+                <tr>
+                    <td>Kelvin Weather
+                        <a href="https://drive.google.com/file/d/1JHm-h4rQa4tCHldeoTp6rZ7VjfRzcUSh/view?usp=sharing" target="_blank"> <br> [src code] </a></td>
+                    <td> A project in CodeCademy to convert kelvin to fahrenheit.
+                    <td> JAVASCRIPT ES6
+                    <td>October 2022</td>
+                </tr>
+
                 <tr>
                     <td>Days of the Week 
                         <a href="https://drive.google.com/file/d/1zkhO4kw0fZmxzlikE769kNYOEgg78h1d/view?usp=sharing" target="_blank"> <br> [video] </a></td>
