--- a/main.html
+++ b/main.html
@@ -49,8 +49,10 @@
                     &nbsp;&nbsp;&nbsp;
                     <a href="https://www.photopea.com/" target="_blank"><img src="images/icon_photopea.png"></a>
                     <br>
+                    <br>
                     <a href="https://www.linkedin.com/in/kyle-erica-danque-090165251/" target="_blank"><img src="images/icon_linkedin.png"></a>
-
+                    &nbsp;&nbsp;&nbsp;
+                    <a href="https://danquekyleerica5.wixsite.com/mysite" target="_blank"><img src="images/icon_wix.png"></a>
                   </div>
                 </div>
               </div>
