--- a/main.html
+++ b/main.html
@@ -132,12 +132,14 @@
                   With at least 6 - 8 months of experience<br> 
                   <hr>
                   <br>
-                  HTML / CSS / JAVASCRIPT ES6 <br> <br>
+                  HTML / CSS / JAVASCRIPT ES6 <br>
+                  <br>
                   
              
                   <hr>
                   <br>
                   With at least 2 - 5 months of experience<br>
+                  AJAX , API <br> 
                   Python <br>
                   Android Dev + SQLite <br>
                   PHP <br> <br>
