--- a/main.html
+++ b/main.html
@@ -52,7 +52,7 @@
                     <br>
                     <a href="https://www.linkedin.com/in/kyle-erica-danque-090165251/" target="_blank"><img src="images/icon_linkedin.png"></a>
                     &nbsp;&nbsp;&nbsp;
-                    <a href="https://danquekyleerica5.wixsite.com/mysite" target="_blank"><img src="images/icon_wix.png"></a>
+                    <!--<a href="https://danquekyleerica5.wixsite.com/mysite" target="_blank"><img src="images/icon_wix.png"></a>-->
                   </div>
                 </div>
               </div>
