--- a/main.html
+++ b/main.html
@@ -51,7 +51,7 @@
                     <br>
                     <br>
                     <a href="https://www.linkedin.com/in/kyle-erica-danque-090165251/" target="_blank"><img src="images/icon_linkedin.png"></a>
-                    &nbsp;&nbsp;&nbsp;
+                    <!--&nbsp;&nbsp;&nbsp;-->
                     <!--<a href="https://danquekyleerica5.wixsite.com/mysite" target="_blank"><img src="images/icon_wix.png"></a>-->
                   </div>
                 </div>
