--- a/main.html
+++ b/main.html
@@ -128,7 +128,7 @@
                 <a class="close" href="#">&times;</a>
                 <div class="content">
                  
-                  With at least 6 - 8 months of experience<br> 
+                  With at least 1 year experience of<br> 
                   <hr>
                   <br>
                   HTML / CSS / JAVASCRIPT ES6 <br>
@@ -137,7 +137,7 @@
              
                   <hr>
                   <br>
-                  With at least 2 - 5 months of experience<br>
+                  With at least 6 months of experience<br>
                   AJAX , API <br> 
                   Python <br>
                   Android Dev + SQLite <br>
@@ -168,9 +168,9 @@
                   <hr>
                   ke.coder08@gmail.com <br> <br>
 
-                  Date of Update - Last Update<br>
+                  Date of Last Update<br>
                   <hr>
-                  October 2022 - September 2022  <br> <br>
+                  December 2023  <br> <br>
 
                 </div>
               </div>
