--- a/project.html
+++ b/project.html
@@ -30,6 +30,23 @@
                     <th>LANGUAGES / TOOL USED</th>
                     <th>DATE CREATED</th>
                 </tr>
+                <!--2023 PROJECTS-->
+                <tr>
+                    <td>
+                        <a href="https://onlinegdb.com/34jzHGpeQ" target="_blank"> <br> [src code] </a></td>
+                    <td> A project in Python that deals with basic operations (add,edit,delete).
+                    <td> PYTHON
+                    <td>October 2023</td>
+                </tr>
+
+                <tr>
+                    <td>
+                        <a href="https://onlinegdb.com/GaKwjXqcP" target="_blank"> <br> [src code] </a></td>
+                    <td> A project in Python that draws 6/42 lotto.
+                    <td> PYTHON
+                    <td>September 2023</td>
+                </tr>
+
                 <!--2022 PROJECTS-->
 
                 <tr>
